Testing out CSS Grid

--- a/src/components/ItemCategory/item-category.component.css
+++ b/src/components/ItemCategory/item-category.component.css
@@ -1,9 +1,4 @@
-.ItemCategory {
-}
-
 .Items {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-content: flex-start;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
 }
