--- a/src/components/Item/item.component.css
+++ b/src/components/Item/item.component.css
@@ -1,25 +1,47 @@
 .Item {
-    background-color: red;
-    /* height: 100px;
-    width: 100px; */
-    margin: 10px;
+    background-color: #282c34;
+    color: white;
+    border: 1px solid rgb(127, 127, 0);
+    border-radius: 20;
     display: flex;
     flex-direction: column;
     text-align: center;
     transition: transform .2s;
 }
 
-.Item span {
-    max-width: 100px;
-}
-
 .Item:hover {
     transform: scale(1.5);
 }
 
+.Overlay {
+    position: fixed;
+    visibility: hidden;
+    background-color: #282c34;
+    color: white;
+    border: 1px solid rgb(127, 127, 0);
+    border-radius: 20;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    transition: transform .2s;
+}
+
+.Item:hover > .Overlay {
+    visibility: visible;
+}
+
 .Item img {
-    max-width: 100px;
-    max-height: 100px;
-    width: auto;
-    height: auto;
+    padding: 10px;
+}
+
+.Checklist {
+    align-self: center;
+    list-style-type: none;
+    text-align: left;
+    margin: 0;
+    padding: 0;
+}
+
+.Checklist li {
+    width: 7em;
 }
